--- a/charts/demo/Chart.yaml
+++ b/charts/demo/Chart.yaml
@@ -24,5 +24,5 @@ version: 0.2.0
 appVersion: "1.16.0"
 
 maintainers:
-  - name: Paul McDonald
+  - name: thepaulmacca
     email: me@thepaulmacca.com
